force-app/main/default/objects/DIR_Case__c/DIR_Case__c.object-meta.xml
<CustomObject>
    <description>This object contains the BOFE DIR Case.  Temporary name will be DIR Case in order to differentiate between Standard Object Case and this case.  Vertiba August 20 from ERD</description>
    <label>Case Management</label>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>DIR Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>