force-app/main/default/objects/DIR_Case__c/fields/Additional_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Additional_Case_Number__c</fullName>
    <label>Additional Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>