force-app/main/default/objects/DIR_Case__c/fields/Address_Primary_City__c.field-meta.xml
<CustomField>
    <fullName>Address_Primary_City__c</fullName>
    <description>Formula feild to display the Primary Address of the Employer/Business Account on this object. This field is also being used to merge to Conga documents and also to pre-populate on it on the Inspection Questions.</description>
    <formula>Employer__r.ShippingCity</formula>
    <label>Primary Address City</label>
    <type>Text</type>
</CustomField>