force-app/main/default/objects/DIR_Case__c/fields/Address_Where_Worked_Street__c.field-meta.xml
<CustomField>
    <fullName>Address_Where_Worked_Street__c</fullName>
    <inlineHelpText>Address where worked if different from Employer address</inlineHelpText>
    <label>Address Where Worked Street</label>
    <type>TextArea</type>
</CustomField>