force-app/main/default/objects/DIR_Case__c/fields/Adverse_Action__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Action__c</fullName>
    <inlineHelpText>Used on FIR/Citation</inlineHelpText>
    <label>Adverse Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Terminated/Discharged/Fired</fullName>
            </value>
            <value>
                <fullName>Demoted</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Pay Reduced</fullName>
            </value>
            <value>
                <fullName>Hours Reduced</fullName>
            </value>
            <value>
                <fullName>Changed Work Schedule</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Disciplinary Action/Written Warning</fullName>
            </value>
            <value>
                <fullName>Poor Evaluation</fullName>
            </value>
            <value>
                <fullName>Threatened</fullName>
            </value>
            <value>
                <fullName>Benefits Denied</fullName>
            </value>
            <value>
                <fullName>Not Hired</fullName>
            </value>
            <value>
                <fullName>Not Rehired</fullName>
            </value>
            <value>
                <fullName>Harassed</fullName>
            </value>
            <value>
                <fullName>Intimidated</fullName>
            </value>
            <value>
                <fullName>Forced to Resign/Quit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Change in Pay</fullName>
            </value>
            <value>
                <fullName>Change in Hours</fullName>
            </value>
            <value>
                <fullName>Demotion/Reduced Hours</fullName>
            </value>
            <value>
                <fullName>Poor Eval</fullName>
            </value>
            <value>
                <fullName>Disc Action</fullName>
            </value>
            <value>
                <fullName>Threat</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Denial of Benefits</fullName>
            </value>
            <value>
                <fullName>Failure to Hire/Rehire</fullName>
            </value>
            <value>
                <fullName>Harassment/Intimidation</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
                <isActive>false</isActive>
                <label>Terminated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>