force-app/main/default/objects/DIR_Case__c/fields/Adverse_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Action_Date__c</fullName>
    <inlineHelpText>Used on FIR/Citation</inlineHelpText>
    <label>Adverse Action Date</label>
    <type>Date</type>
</CustomField>