force-app/main/default/objects/DIR_Case__c/fields/Adverse_Action_Description__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Action_Description__c</fullName>
    <inlineHelpText>500 character limit
Used on FIR/Citation</inlineHelpText>
    <label>Allegation Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>