force-app/main/default/objects/DIR_Case__c/fields/Adverse_Action_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Action_Other_Text__c</fullName>
    <label>Adverse Action Other Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>