force-app/main/default/objects/DIR_Case__c/fields/Advocate__c.field-meta.xml
<CustomField>
    <fullName>Advocate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advocate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Management (Advocate)</relationshipLabel>
    <relationshipName>Advocate</relationshipName>
    <type>Lookup</type>
</CustomField>