force-app/main/default/objects/DIR_Case__c/fields/Advocate_City__c.field-meta.xml
<CustomField>
    <fullName>Advocate_City__c</fullName>
    <label>Advocate City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>