force-app/main/default/objects/DIR_Case__c/fields/Advocate_Name_in_Text__c.field-meta.xml
<CustomField>
    <fullName>Advocate_Name_in_Text__c</fullName>
    <label>Advocate Name in Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>