force-app/main/default/objects/DIR_Case__c/fields/All_Case_Issues_on_Case__c.field-meta.xml
<CustomField>
    <fullName>All_Case_Issues_on_Case__c</fullName>
    <label>All Case Issues on Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>