force-app/main/default/objects/DIR_Case__c/fields/Amended_notice_detail_Other__c.field-meta.xml
<CustomField>
    <fullName>Amended_notice_detail_Other__c</fullName>
    <description>PAGA Amended notice "Other" field information</description>
    <label>Amended notice detail - Other</label>
    <type>TextArea</type>
</CustomField>