force-app/main/default/objects/DIR_Case__c/fields/Ancestry_Ethnic_Origin__c.field-meta.xml
<CustomField>
    <fullName>Ancestry_Ethnic_Origin__c</fullName>
    <label>Ancestry / Ethnic Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>