force-app/main/default/objects/DIR_Case__c/fields/Anonymous__c.field-meta.xml
<CustomField>
    <fullName>Anonymous__c</fullName>
    <label>Anonymous</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>