force-app/main/default/objects/DIR_Case__c/fields/Applicant_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Type__c</fullName>
    <label>Applicant Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>