force-app/main/default/objects/DIR_Case__c/fields/Archive__c.field-meta.xml
<CustomField>
    <fullName>Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Archiving Content Document in OB Archiver</description>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>