force-app/main/default/objects/DIR_Case__c/fields/Assigned_Deputy__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Deputy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Deputy</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>DIR_Employee__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>DIR_Employee__c.User__r.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Case Management (Assigned Deputy)</relationshipLabel>
    <relationshipName>DIR_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>