force-app/main/default/objects/DIR_Case__c/fields/Assigned_Deputy_Fax__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Deputy_Fax__c</fullName>
    <description>Used by Conga to pull fax number from the Office record related to the Internal Employee record related to the Case.</description>
    <formula>Assigned_Deputy__r.Office__r.Fax__c</formula>
    <label>Assigned Deputy Fax</label>
    <type>Text</type>
</CustomField>