force-app/main/default/objects/DIR_Case__c/fields/Assigned_Deputy_Phone__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Deputy_Phone__c</fullName>
    <description>Used by Conga to pull phone number from the Internal Employee record related to the Case.</description>
    <formula>Assigned_Deputy__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Deputy Phone</label>
    <type>Text</type>
</CustomField>