force-app/main/default/objects/DIR_Case__c/fields/Assigned_PAGA_Unit_Screener__c.field-meta.xml
<CustomField>
    <fullName>Assigned_PAGA_Unit_Screener__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned PAGA Unit Screener</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Case Management (Assigned PAGA Unit Screener)</relationshipLabel>
    <relationshipName>Case_Management4</relationshipName>
    <type>Lookup</type>
</CustomField>