force-app/main/default/objects/DIR_Case__c/fields/Assigned_Screener__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Screener__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the screener assigned</description>
    <label>Assigned Screener</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Case Management (Assigned Screener)</relationshipLabel>
    <relationshipName>Case_ManagementQOX6</relationshipName>
    <type>Lookup</type>
</CustomField>