force-app/main/default/objects/DIR_Case__c/fields/Assigned_Strategy_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Strategy_Team__c</fullName>
    <label>Assigned Strategy Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Car Wash</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Janitorial</fullName>
            </value>
            <value>
                <fullName>Residential Care</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>