force-app/main/default/objects/DIR_Case__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <description>This is for the bank account number. Allows users to enter any number. Leading zeros are removed.</description>
    <inlineHelpText>This is for the bank account number. Allows users to enter any number. Leading zeros are removed.</inlineHelpText>
    <label>Bank Account #</label>
    <length>80</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>