force-app/main/default/objects/DIR_Case__c/fields/Bank_Location__c.field-meta.xml
<CustomField>
    <fullName>Bank_Location__c</fullName>
    <description>For location of bank.</description>
    <label>Bank Location</label>
    <type>TextArea</type>
</CustomField>