force-app/main/default/objects/DIR_Case__c/fields/BOFE_Date_Stayed__c.field-meta.xml
<CustomField>
    <fullName>BOFE_Date_Stayed__c</fullName>
    <description>BOFE Date Stayed</description>
    <label>Date Stayed</label>
    <type>Date</type>
</CustomField>