force-app/main/default/objects/DIR_Case__c/fields/BoFE_Office_Location_City__c.field-meta.xml
<CustomField>
    <fullName>BoFE_Office_Location_City__c</fullName>
    <description>Office with jurisdiction over the case. Set by DIRCaseAll trigger on insert for BOFE record type only. Looks up the city from the related employer and looks up the associated office field on the BOFE City Offices custom setting and sets this field to that value.</description>
    <inlineHelpText>BOFE Office with jurisdiction of the case</inlineHelpText>
    <label>BOFE Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bakersfield</fullName>
            </value>
            <value>
                <fullName>El Centro</fullName>
            </value>
            <value>
                <fullName>Fresno</fullName>
            </value>
            <value>
                <fullName>Long Beach</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Oakland</fullName>
            </value>
            <value>
                <fullName>Redding</fullName>
            </value>
            <value>
                <fullName>Sacramento</fullName>
            </value>
            <value>
                <fullName>Salinas</fullName>
            </value>
            <value>
                <fullName>San Bernardino</fullName>
            </value>
            <value>
                <fullName>San Diego</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>San Jose</fullName>
            </value>
            <value>
                <fullName>Santa Ana</fullName>
            </value>
            <value>
                <fullName>Santa Barbara</fullName>
            </value>
            <value>
                <fullName>Santa Rosa</fullName>
            </value>
            <value>
                <fullName>Stockton</fullName>
            </value>
            <value>
                <fullName>Van Nuys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>