force-app/main/default/objects/DIR_Case__c/fields/Case_Age_BOFE__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_BOFE__c</fullName>
    <formula>IF(
ISBLANK(Case_Closed_Date__c),
("total of "&amp;TEXT(TODAY() - Date_Assigned__c)&amp;" day(s)"),("total of "&amp;TEXT(Case_Closed_Date__c - Date_Assigned__c)&amp;" day(s)"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case Closed Date minus Assigned Date. If Case is not closed it is current age.</inlineHelpText>
    <label>Case Age</label>
    <type>Text</type>
</CustomField>