force-app/main/default/objects/DIR_Case__c/fields/Case_Age_JEU__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_JEU__c</fullName>
    <formula>"total of "&amp;TEXT(TODAY()- Date_Assigned__c)&amp;" day(s)"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age</label>
    <type>Text</type>
</CustomField>