force-app/main/default/objects/DIR_Case__c/fields/Case_Age_WCA__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_WCA__c</fullName>
    <formula>IF(
ISBLANK(Case_Closed_Date__c),
("total of "&amp;TEXT(TODAY() -  Date_of_Docket__c )&amp;" day(s)"),("total of "&amp;TEXT(Case_Closed_Date__c - Date_of_Docket__c)&amp;" day(s)"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age</label>
    <type>Text</type>
</CustomField>