force-app/main/default/objects/DIR_Case__c/fields/Case_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Date__c</fullName>
    <description>Case Closed Date</description>
    <inlineHelpText>The date on which a case was finally closed</inlineHelpText>
    <label>Case Closed Date</label>
    <type>Date</type>
</CustomField>