force-app/main/default/objects/DIR_Case__c/fields/Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Case_Comment__c</fullName>
    <label>Case Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>