force-app/main/default/objects/DIR_Case__c/fields/Case_Inclusions__c.field-meta.xml
<CustomField>
    <fullName>Case_Inclusions__c</fullName>
    <label>Inclusions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>