force-app/main/default/objects/DIR_Case__c/fields/Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Name__c</fullName>
    <description>ERROR: "You have reached the maximum number of 15 object references on Case Management."
Change Employee F+L Name to Claimant (lookup) once workflow rules are combined into Flow.</description>
    <formula>IF(Employee_First_Name__c=NULL || ISPICKVAL(Case_Type__c, "EPA"), (IF(Employer__r.Name="",Employer__r.FirstName+" "+Employer__r.LastName,Employer__r.Name)), (Employee_First_Name__c+" "+IF(Employee_Middle_Name__c=NULL, "", Employee_Middle_Name__c + " ") +Employee_Last_Name__c+" "+"v."+" "+Employer_Name_in_Text__c))</formula>
    <inlineHelpText>Employee First Name, Employee Last Name, and Employer Name</inlineHelpText>
    <label>Case Name</label>
    <type>Text</type>
</CustomField>