force-app/main/default/objects/DIR_Case__c/fields/Case_Name_PAGA__c.field-meta.xml
<CustomField>
    <fullName>Case_Name_PAGA__c</fullName>
    <formula>IF(Plaintiff_for_PAGA_Case_Text__c=NULL, (IF(Employer__r.Name="",Employer__r.FirstName+" "+Employer__r.LastName,Employer__r.Name)), IF(!CONTAINS(Plaintiff_for_PAGA_Case_Text__c,","),(Plaintiff_for_PAGA_Case_Text__c+" "+"v."+" "+Employer_Name_in_Text__c), LEFT(Plaintiff_for_PAGA_Case_Text__c, FIND(",", Plaintiff_for_PAGA_Case_Text__c)-1)+" "+"v."+" "+Employer_Name_in_Text__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Name</label>
    <type>Text</type>
</CustomField>