force-app/main/default/objects/DIR_Case__c/fields/Case_Re_Open_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Re_Open_Status__c</fullName>
    <label>Case Re-Open Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>