force-app/main/default/objects/DIR_Case__c/fields/Case_Source__c.field-meta.xml
<CustomField>
    <fullName>Case_Source__c</fullName>
    <description>List of Case Sources</description>
    <label>Case Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALRB</fullName>
            </value>
            <value>
                <fullName>AB 633 Referral</fullName>
            </value>
            <value>
                <fullName>Anonymous</fullName>
            </value>
            <value>
                <fullName>BOFE</fullName>
            </value>
            <value>
                <fullName>CBO Referral-Strategy Case</fullName>
            </value>
            <value>
                <fullName>CDI Referral</fullName>
            </value>
            <value>
                <fullName>CDSS</fullName>
            </value>
            <value>
                <fullName>CDSS MOU</fullName>
            </value>
            <value>
                <fullName>Community Group Referral</fullName>
            </value>
            <value>
                <fullName>DA Referral</fullName>
            </value>
            <value>
                <fullName>Deputy Created</fullName>
            </value>
            <value>
                <fullName>DIR/DLSE Info Complaint</fullName>
            </value>
            <value>
                <fullName>DLSE L&amp;R Car Wash</fullName>
            </value>
            <value>
                <fullName>DLSE L&amp;R - Garment Home Inspection</fullName>
            </value>
            <value>
                <fullName>DLSE L&amp;R - Industrial Homework</fullName>
            </value>
            <value>
                <fullName>DLSE L&amp;R - Sheltered Workshop</fullName>
            </value>
            <value>
                <fullName>DLSE L&amp;R - Sub-Minimum Wage</fullName>
            </value>
            <value>
                <fullName>DOL/Empleo</fullName>
            </value>
            <value>
                <fullName>EDD/EETF Referral</fullName>
            </value>
            <value>
                <fullName>EDD-MAO</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Employer/Employer Association</fullName>
            </value>
            <value>
                <fullName>Inspection Request</fullName>
            </value>
            <value>
                <fullName>Interagency Referral</fullName>
            </value>
            <value>
                <fullName>IWC Exemption Request</fullName>
            </value>
            <value>
                <fullName>Kaiser Referral (injured worker)</fullName>
            </value>
            <value>
                <fullName>LC 2699</fullName>
            </value>
            <value>
                <fullName>LETF</fullName>
            </value>
            <value>
                <fullName>LETF Call/Email</fullName>
            </value>
            <value>
                <fullName>Minor Hours-Ag Ind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>