force-app/main/default/objects/DIR_Case__c/fields/Case_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_Comments__c</fullName>
    <description>Companion Case – Other Comments field when Case Status Companion Case – Other picklist is selected</description>
    <label>Case Status Comments</label>
    <type>TextArea</type>
</CustomField>