force-app/main/default/objects/DIR_Case__c/fields/Case_Status_in_OIS__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_in_OIS__c</fullName>
    <label>Case Status in OIS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case needs to be created in OIS</fullName>
            </value>
            <value>
                <fullName>Case has been created in OIS</fullName>
            </value>
            <value>
                <fullName>Case needs to be deleted from OIS</fullName>
            </value>
            <value>
                <fullName>Case has been deleted from OIS</fullName>
            </value>
            <value>
                <fullName>Case has been closed in OIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>